src/antlr/FinalPythonParser.java
// Generated from src/antlr/FinalPythonParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FinalPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, DEF=3, RETURN=4, IF=5, ELSE=6, ELIF=7, WHILE=8, FOR=9, 
		IN=10, IMPORT=11, FROM=12, CLASS=13, TRY=14, EXCEPT=15, FINALLY=16, WITH=17, 
		AS=18, PASS=19, BREAK=20, CONTINUE=21, LAMBDA=22, GLOBAL=23, NONLOCAL=24, 
		ASSERT=25, DEL=26, YIELD=27, RAISE=28, NONE=29, TRUE=30, FALSE=31, AND=32, 
		OR=33, NOT=34, IS=35, AT=36, LPAREN=37, RPAREN=38, LBRACK=39, RBRACK=40, 
		LBRACE=41, RBRACE=42, COLON=43, COMMA=44, SEMI=45, DOT=46, ASSIGN=47, 
		PLUS=48, MINUS=49, STAR=50, SLASH=51, PERCENT=52, POWER=53, ARROW=54, 
		PLUS_ASSIGN=55, MINUS_ASSIGN=56, EQ=57, NEQ=58, LT=59, GT=60, LE=61, GE=62, 
		GG=63, LL=64, AND_SIGN=65, CHAPEUX=66, OR_SIGN=67, DIV_DIV=68, TELTA=69, 
		NAME=70, STRING=71, NUMBER=72, COMMENT=73, WS=74, NL=75;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simple_stmt = 2, RULE_small_stmt = 3, 
		RULE_expr_stmt = 4, RULE_annotated_assignment = 5, RULE_import_stmt = 6, 
		RULE_import_as_names = 7, RULE_import_as_name = 8, RULE_dotted_name = 9, 
		RULE_pass_stmt = 10, RULE_flow_stmt = 11, RULE_break_stmt = 12, RULE_continue_stmt = 13, 
		RULE_return_stmt = 14, RULE_raise_stmt = 15, RULE_yield_stmt = 16, RULE_assert_stmt = 17, 
		RULE_global_stmt = 18, RULE_nonlocal_stmt = 19, RULE_del_stmt = 20, RULE_compound_stmt = 21, 
		RULE_if_stmt = 22, RULE_while_stmt = 23, RULE_for_stmt = 24, RULE_try_stmt = 25, 
		RULE_except_clause = 26, RULE_with_stmt = 27, RULE_with_item = 28, RULE_func_def = 29, 
		RULE_parameters = 30, RULE_param = 31, RULE_class_def = 32, RULE_decorated = 33, 
		RULE_decorators = 34, RULE_suite = 35, RULE_argument = 36, RULE_expr = 37, 
		RULE_atom = 38, RULE_entry = 39, RULE_list_comp = 40, RULE_dict_comp = 41, 
		RULE_comp_for = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simple_stmt", "small_stmt", "expr_stmt", "annotated_assignment", 
			"import_stmt", "import_as_names", "import_as_name", "dotted_name", "pass_stmt", 
			"flow_stmt", "break_stmt", "continue_stmt", "return_stmt", "raise_stmt", 
			"yield_stmt", "assert_stmt", "global_stmt", "nonlocal_stmt", "del_stmt", 
			"compound_stmt", "if_stmt", "while_stmt", "for_stmt", "try_stmt", "except_clause", 
			"with_stmt", "with_item", "func_def", "parameters", "param", "class_def", 
			"decorated", "decorators", "suite", "argument", "expr", "atom", "entry", 
			"list_comp", "dict_comp", "comp_for"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'def'", "'return'", "'if'", "'else'", "'elif'", "'while'", 
			"'for'", "'in'", "'import'", "'from'", "'class'", "'try'", "'except'", 
			"'finally'", "'with'", "'as'", "'pass'", "'break'", "'continue'", "'lambda'", 
			"'global'", "'nonlocal'", "'assert'", "'del'", "'yield'", "'raise'", 
			"'None'", "'True'", "'False'", "'and'", "'or'", "'not'", "'is'", "'@'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "';'", "'.'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'->'", "'+='", "'-='", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'>>'", "'<<'", "'&'", 
			"'^'", "'|'", "'//'", "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "DEF", "RETURN", "IF", "ELSE", "ELIF", "WHILE", 
			"FOR", "IN", "IMPORT", "FROM", "CLASS", "TRY", "EXCEPT", "FINALLY", "WITH", 
			"AS", "PASS", "BREAK", "CONTINUE", "LAMBDA", "GLOBAL", "NONLOCAL", "ASSERT", 
			"DEL", "YIELD", "RAISE", "NONE", "TRUE", "FALSE", "AND", "OR", "NOT", 
			"IS", "AT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
			"COLON", "COMMA", "SEMI", "DOT", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", 
			"PERCENT", "POWER", "ARROW", "PLUS_ASSIGN", "MINUS_ASSIGN", "EQ", "NEQ", 
			"LT", "GT", "LE", "GE", "GG", "LL", "AND_SIGN", "CHAPEUX", "OR_SIGN", 
			"DIV_DIV", "TELTA", "NAME", "STRING", "NUMBER", "COMMENT", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FinalPythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FinalPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FinalPythonParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(FinalPythonParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(FinalPythonParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 847401337912120L) != 0) || ((((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & 79L) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEF:
				case RETURN:
				case IF:
				case WHILE:
				case FOR:
				case IMPORT:
				case FROM:
				case CLASS:
				case TRY:
				case WITH:
				case PASS:
				case BREAK:
				case CONTINUE:
				case GLOBAL:
				case NONLOCAL:
				case ASSERT:
				case DEL:
				case YIELD:
				case RAISE:
				case NONE:
				case TRUE:
				case FALSE:
				case NOT:
				case AT:
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case PLUS:
				case MINUS:
				case TELTA:
				case NAME:
				case STRING:
				case NUMBER:
					{
					setState(86);
					statement();
					}
					break;
				case NL:
					{
					setState(87);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStatementContext extends StatementContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public CompoundStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterCompoundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitCompoundStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitCompoundStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends StatementContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public SimpleStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case IF:
			case WHILE:
			case FOR:
			case CLASS:
			case TRY:
			case WITH:
			case AT:
				_localctx = new CompoundStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				compound_stmt();
				}
				break;
			case RETURN:
			case IMPORT:
			case FROM:
			case PASS:
			case BREAK:
			case CONTINUE:
			case GLOBAL:
			case NONLOCAL:
			case ASSERT:
			case DEL:
			case YIELD:
			case RAISE:
			case NONE:
			case TRUE:
			case FALSE:
			case NOT:
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case PLUS:
			case MINUS:
			case TELTA:
			case NAME:
			case STRING:
			case NUMBER:
				_localctx = new SimpleStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				simple_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public TerminalNode NL() { return getToken(FinalPythonParser.NL, 0); }
		public List<TerminalNode> SEMI() { return getTokens(FinalPythonParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(FinalPythonParser.SEMI, i);
		}
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			small_stmt();
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(100);
					match(SEMI);
					setState(101);
					small_stmt();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(107);
				match(SEMI);
				}
			}

			setState(110);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
	 
		public Small_stmtContext() { }
		public void copyFrom(Small_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends Small_stmtContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public ImportStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NonlocalStmtContext extends Small_stmtContext {
		public Nonlocal_stmtContext nonlocal_stmt() {
			return getRuleContext(Nonlocal_stmtContext.class,0);
		}
		public NonlocalStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterNonlocalStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitNonlocalStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitNonlocalStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AnnotatedAssignmentStmtContext extends Small_stmtContext {
		public Annotated_assignmentContext annotated_assignment() {
			return getRuleContext(Annotated_assignmentContext.class,0);
		}
		public AnnotatedAssignmentStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterAnnotatedAssignmentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitAnnotatedAssignmentStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitAnnotatedAssignmentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlowStmtContext extends Small_stmtContext {
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public FlowStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterFlowStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitFlowStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitFlowStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DelStmtContext extends Small_stmtContext {
		public Del_stmtContext del_stmt() {
			return getRuleContext(Del_stmtContext.class,0);
		}
		public DelStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterDelStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitDelStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitDelStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PassStmtContext extends Small_stmtContext {
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public PassStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterPassStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitPassStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitPassStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStmtContext extends Small_stmtContext {
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public GlobalStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterGlobalStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitGlobalStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitGlobalStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssertStmtContext extends Small_stmtContext {
		public Assert_stmtContext assert_stmt() {
			return getRuleContext(Assert_stmtContext.class,0);
		}
		public AssertStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterAssertStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitAssertStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitAssertStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStmtContext extends Small_stmtContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public ExpressionStmtContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).enterExpressionStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FinalPythonParserListener ) ((FinalPythonParserListener)listener).exitExpressionStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FinalPythonParserVisitor ) return ((FinalPythonParserVisitor<? extends T>)visitor).visitExpressionStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_small_stmt);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new AnnotatedAssignmentStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				annotated_assignment();
				}
				break;
			case 2:
				_localctx = new ExpressionStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				expr_stmt();
				}
				break;
			case 3:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				import_stmt();
				}
				break;
			case 4:
				_localctx = new PassStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				pass_stmt();
				}
				break;
			case 5:
				_localctx = new FlowStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				flow_stmt();
				}
				break;
			case 6:
				_localctx = new AssertStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(117);
				assert_stmt();
				}
				break;
			case 7:
				_localctx = new GlobalStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(118);
				global_stmt();
				}
				break;
			case 8:
				_localctx = new NonlocalStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(119);
				nonlocal_stmt();
				}
				break;
			case 9:
				_localctx = new DelStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(120);
				del_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
